--- a/tests/irc_tester/Cargo.toml
+++ b/tests/irc_tester/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2024"
 [dependencies]
 tokio = { version = "1.32.0", features = ["full"] }
 anyhow = "1.0"
+rand = "0.9.2"
+futures = "0.3.31"
 
